k9stud.com (archived on 2009-09-15)
{
  "alexa_rank": 54748,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3594,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.72,
  "homepage_snapshot_redirected_domain": "k9stud.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090915190402id_/http://www.k9stud.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090915190402id_/http%3A//k9stud.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "k9stud.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090915190407id_/http%3A//www.k9stud.com/privacy.aspx",
  "policy_title": "k9Stud.com",
  "policy_url": "k9stud.com/privacy.aspx",
  "sha1": "158be027c6f9eef7b78850929b380819a5351f00",
  "simhash": 2970923388229792604,
  "simhash_updated": false,
  "site_hostname": "k9stud.com",
  "site_url": "http://k9stud.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090915190407",
  "word_count": 577,
  "year": 2009
}

--- a/k/k9/k9s/k9stud.com.html
+++ b/k/k9/k9s/k9stud.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the k9stud.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618114644id_/http%3A//www.k9stud.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the k9stud.com privacy policy that was archived on 2009-09-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090915190407id_/http%3A//www.k9stud.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>k9Stud.com</title>
@@ -86,7 +86,7 @@ google_color_text = "000000";
 							Posted K9's</a> | <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="searchk9.aspx">Search 
 							K9's</a> | <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="Forum/">Forum</a>
 						| <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="scammers.aspx">Scammer 
-							List</a> | <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="store.aspx">e-Store</a>
+							List</a> | <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="Store/">e-Store</a>
 						| <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="dogbreeds.htm">Dog 
 							Breeds</a> | <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="viewalldogvideos.aspx">Videos</a>
 						| <img alt="Dogs for Sale, Puppies for Sale" src="img\oarrow8.gif"><a href="http://www.k9stud.com/">Logout</a></div>
@@ -310,7 +310,7 @@ google_ad_channel = "";
 			</tr>
 			<tr>
 				<td align="center" class="blue10ArialB">
-					<a href="http://www.k9stud.com/linktous.aspx">MySpace Dog Graphics</a> &nbsp;|&nbsp;<a href="http://www.k9stud.com/viewallK9adoptions.aspx">Free Puppies</a> &nbsp;|&nbsp;<a href="http://www.k9stud.com/hypoallergenic-dogs.aspx">Hypoallergenic Dogs</a> &nbsp;|&nbsp;<a href="http://www.equines4us.com/Horses/">Horses for Sale</a> &nbsp;|&nbsp;<a href="http://www.felines4us.com/Kittens/">Kittens for Sale</a> &nbsp;|&nbsp;<a href="http://www.hipscopes.com/">Free Horoscopes</a> &nbsp;|&nbsp;<a href="http://www.k9puppy.co.uk/PuppiesforSale/">Puppies in UK</a><br>
+					<a href="http://www.k9stud.com/Store/orijen.aspx">Orijen Dog Food</a> &nbsp;|&nbsp;<a href="http://www.k9stud.com/Store/acana.aspx">Acana Dog Food</a> &nbsp;|&nbsp;<a href="http://www.k9stud.com/viewallK9adoptions.aspx">Free Puppies</a> &nbsp;|&nbsp;<a href="http://www.k9stud.com/hypoallergenic-dogs.aspx">Hypoallergenic Dogs</a> &nbsp;|&nbsp;<a href="http://www.equines4us.com/Horses/">Horses for Sale</a> &nbsp;|&nbsp;<a href="http://www.felines4us.com/Kittens/">Kittens for Sale</a> &nbsp;|&nbsp;<a href="http://www.hipscopes.com/">Free Horoscopes</a> &nbsp;|&nbsp;<a href="http://www.k9puppy.co.uk/PuppiesforSale/">Puppies in UK</a><br>
 					© 2006-2009 K9Stud.com All Rights Reserved
 					<br>
 					Toll Free: 866-462-9179
