snazzyspace.com (archived on 2009-09-15)
{
  "alexa_rank": 57565,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 8551,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.59,
  "homepage_snapshot_redirected_domain": "snazzyspace.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001020239id_/http://www.snazzyspace.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001020239id_/http%3A//snazzyspace.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "snazzyspace.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090915225252id_/http%3A//www.snazzyspace.com/privacy.php",
  "policy_title": "SnazzySpace.com - Privacy Policy!",
  "policy_url": "snazzyspace.com/privacy.php",
  "sha1": "e8453d70a2abba2df5c4bb59589c885e07bd89b6",
  "simhash": 12752570395280345368,
  "simhash_updated": true,
  "site_hostname": "snazzyspace.com",
  "site_url": "http://snazzyspace.com",
  "smog": 14.51,
  "strict_updated": true,
  "timestamp": "20090915225252",
  "word_count": 1350,
  "year": 2009
}

--- a/s/sn/sna/snazzyspace.com.html
+++ b/s/sn/sna/snazzyspace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the snazzyspace.com privacy policy that was archived on 2009-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090514072344id_/http%3A//www.snazzyspace.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snazzyspace.com privacy policy that was archived on 2009-09-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090915225252id_/http%3A//www.snazzyspace.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 	<title>SnazzySpace.com - Privacy Policy!</title>
@@ -69,18 +69,11 @@
 			<a href="http://www.snazzyspace.com/bebo-skins/page/1">Bebo Skins</a>
 			<a href="http://www.snazzyspace.com/bebo/skin-maker/">Bebo Skin Maker</a>
 		</div>
-		<div class="navad">
-			<a href="http://www.snazzyspace.com/advertise-here/">Advertise Here</a>
-			<a href="http://www.snazzyspace.com/advertise-here/">Advertise Here</a>
-			<a href="http://www.snazzyspace.com/advertise-here/">Advertise Here</a>
-			<a href="http://www.snazzyspace.com/advertise-here/">Advertise Here</a>
-			<a href="http://www.snazzyspace.com/advertise-here/">Advertise Here</a>
-		</div>
 	<div id="main">
 	<div id="body">
 	<div id="navman">
 					<div align="center">
-						<a href="http://www.twitter.com/myspacelyts" target="_blank">
+							<a href="http://www.twitter.com/myspacelyts" target="_blank">
 							<img src="http://www.snazzyspace.com/img/followtwitter.gif" border="0" alt="Follow MySpaceLyts on Twitter">
 						</a>
 					</div>
@@ -155,6 +148,10 @@
 							<a href="http://www.snazzyspace.com/bebo/bebo-templates.php">Bebo Templates</a>
 							<a href="http://www.snazzyspace.com/bebo/resources.php">Bebo Resources</a>
 				</div>
+				<div id="links">
+				<span></span>
+												<a href="http://www.snazzyspace.com/text-links/startad.php" target="_blank">Your Link Here!</a>
+				</div>
 <div align="center">
 <script type="text/javascript"><!--
 google_ad_client = "pub-4898280731079854";
@@ -168,14 +165,11 @@ google_ad_height = 600;
 </script>
 </div>
 					<div class="links">
-						<a href="http://www.superbmakeup.com" target="_blank" class="link">Make Up Tutorials</a>
 						<a href="http://www.friendster-layouts.me" target="_blank" class="link">Best Friendster Layouts</a>
+						<a href="http://www.welovebackgrounds.com" target="_blank" class="link">Twitter Backgrounds</a>
 						<a href="http://www.wewantskins.com" target="_blank" class="link">Bebo Skins</a>
-						<a href="http://www.charmroyal.com" target="_blank" class="link">Page Graphics</a>
 						<a href="http://www.iwantlayouts.com" target="_blank" class="link">Myspace 2.0 Layouts</a>
 						<a href="http://trixinity.net" target="_blank" class="link">Trixinity.net</a>
-						<a href="http://www.wavyeffects.com" target="_blank" class="link">Hot Wavy Photo Effects</a>
-						<a href="http://www.fotline.ws" target="_blank" class="link">Cool Image Effects</a>
 						<a href="http://register.photobucket.com?pbaffsite=612" target="_blank" rel="nofollow">Upload Photos</a>
 						<a href="http://www.beboskinz.com" target="_blank" class="link">Bebo Skins</a>
 					</div>
@@ -300,6 +294,7 @@ SNAZZYSPACE.com sometimes tracks and catalogs the search terms that users enter 
 			<a href="http://www.snazzyspace.com">Homepage</a>
         		<a href="javascript:bookmarksite('COOL Myspace Layouts - SNAZZYSPACE.COM!','http://www.snazzyspace.com')" title="Bookmark SnazzySpace.com">Bookmark Us (ctrl+d)</a>
 			<a href="mailto:snazzyspacedotcom@gmail.com">Contact Us</a>
+			<a href="http://www.snazzyspace.com/DMCA.php">DMCA Policy</a>
 			<a href="http://www.snazzyspace.com/privacy.php">Privacy Policy</a>
 			<br>
 			© 2009 SnazzySpace.com. Do not distribute our layouts anywhere other than your private social networking profile.<br>					
@@ -326,7 +321,7 @@ EXd.write("<img "+EXsrc+"="+EXprot+"://nht-3.extreme-dm.com",
 "/n4.g?login=snazspa&amp;url="+escape(document.URL)+"&amp;pv=&amp;",
 "jv="+EXjv+"&amp;j=y&amp;srw="+EXw+"&amp;srb="+EXb+"&amp;",
 "l="+escape(EXref)+" height=1 width=1>");//-->
-</script><img src="https://nht-3.extreme-dm.com/n4.g?login=snazspa&amp;url=https%3A//web.archive.org/web/20090514072344id_/http%253A//www.snazzyspace.com/privacy.php&amp;pv=&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="nneXTReMe"><img height="1" width="1" alt=""
+</script><img src="https://nht-3.extreme-dm.com/n4.g?login=snazspa&amp;url=https%3A//web.archive.org/web/20090915225252id_/http%253A//www.snazzyspace.com/privacy.php&amp;pv=&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="nneXTReMe"><img height="1" width="1" alt=""
 src="http://nht-3.extreme-dm.com/n4.g?login=snazspa&amp;url=nojs&amp;j=n&amp;jv=n&amp;pv=" />
 </div></noscript>
 <!-- End eXTReMe Non Public Tracker Code -->	
