--- a/l/lo/lov/lovefatedestiny.com.html
+++ b/l/lo/lov/lovefatedestiny.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lovefatedestiny.com privacy policy that was archived on 2009-05-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090512190856id_/http%3A//www.lovefatedestiny.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lovefatedestiny.com privacy policy that was archived on 2009-09-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090915231234id_/http%3A//www.lovefatedestiny.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/Allaboutus.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
@@ -19,7 +19,7 @@ dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
 dc.write('/w/pop.cgi?sid=30716&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
 date_ob.setTime(date_ob.getTime()+43200000);
 dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=30716&amp;m=2&amp;tp=2&amp;v=1.8&amp;c=16"></script>                                                          
+</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=30716&amp;m=2&amp;tp=2&amp;v=1.8&amp;c=17"></script>                                                          
 <!-- ValueClick Media POP-UNDER CODE v1.8 for lovefatedestiny.com -->
 
 
@@ -94,7 +94,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 					    <h3><a class="type1" href="http://www.lovefatedestiny.com">Love Fate Destiny</a></h3>
 						<h4><script type="text/javascript" src="textlinkjs.js"></script><a href="http://www.shareasale.com/r.cfm?b=9851&amp;u=96183&amp;m=1837&amp;urllink=&amp;afftrack=" target="_blank" rel="nofollow" class="type2">Personal Horoscope</a></h4>
 						<h4><script type="text/javascript" src="textlinkjs2.js"></script><a href="http://www.shareasale.com/r.cfm?B=195383&amp;U=96183&amp;M=24119" target="_blank" rel="nofollow" class="type2">Daily Health Tips</a></h4>
-						<h4><script type="text/javascript" src="textlinkjs3.js"></script><a href="http://www.lynxtrack.com/afclick.php?o=9496&amp;b=18g9chdp&amp;p=31435&amp;l=1&amp;s=iphone" target="_blank" rel="nofollow" class="type2">Free IPhone 3GS</a></h4>
+						<h4><script type="text/javascript" src="textlinkjs3.js"></script><a href="http://www.lynxtrack.com/afclick.php?o=8701&amp;b=30z0bf1m&amp;p=31435&amp;l=1&amp;s=macbook2" target="_blank" rel="nofollow" class="type2">Free MacBook Air</a></h4>
 						<br>
                         <h3>Love Section</h3>
                         <h4><a class="type2" href="lovestories.htm">Love Stories</a></h4>
@@ -159,15 +159,14 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                     <table width="100%" border="0" class="outline">
                       <tbody><tr> 
                         <td height="18"> <p><a href="http://www.lovefatedestiny.com" class="type3">Love 
-                            Fate Destiny</a> <strong><font size="2" face="Arial">&gt;</font></strong> 
-                            <a href="privacypolicy.htm" class="type3">Privacy 
+                            Fate Destiny</a>  &gt; <a href="privacypolicy.htm" class="type3">Privacy 
                             Policy </a></p></td>
                       </tr>
                     </tbody></table>
                     <p>&nbsp;</p>
                                 <h1 align="center" class="heading">Privacy Policy</h1>
                             <p>&nbsp;</p>
-                                                    <table width="330" height="630" border="0" align="left" cellpadding="0" cellspacing="0">
+                                                    <table width="340" height="590" border="0" align="left" cellpadding="0" cellspacing="0">
                             <tbody><tr> 
                         <td colspan="2" align="center" valign="top"> <table width="100%" height="15" border="0" cellpadding="0" cellspacing="0">
                             <tbody><tr> 
@@ -181,20 +180,23 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
                                   <tbody><tr> 
                                     <td><script type="text/javascript"><!--
 google_ad_client = "pub-3002194721507739";
-//160x600, created 1/29/08
-google_ad_slot = "8355528690";
-google_ad_width = 160;
-google_ad_height = 600;
-//--></script> <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script> </td>
-                                    <td><script type="text/javascript"><!--
+/* 336x280, created 10/25/08 */
+google_ad_slot = "2188597163";
+google_ad_width = 336;
+google_ad_height = 280;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><script type="text/javascript"><!--
 google_ad_client = "pub-3002194721507739";
-//160x600, created 1/29/08
-google_ad_slot = "5012570897";
-google_ad_width = 160;
-google_ad_height = 600;
-//--></script> <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script> </td>
+/* 336x280, created 10/25/08 */
+google_ad_slot = "7148419105";
+google_ad_width = 336;
+google_ad_height = 280;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
                                   </tr>
                                 </tbody></table>
                                 <table width="100%" height="15" border="0" cellpadding="0" cellspacing="0">
@@ -238,7 +240,10 @@ google_ad_height = 600;
                             information about this practice and to know your choices 
                             about not having this information used by these companies, 
                             click <a href="http://www.google.com/privacy_ads.html" target="_blank" class="type3" rel="nofollow">here</a>. 
-                          </p>
+                            To learn more about this behavioral advertising practice 
+                            or to opt-out of this type of advertising, you can 
+                            visit <a href="http://www.networkadvertising.org" target="_blank" class="type3" rel="nofollow">www.networkadvertising.org 
+                            </a> </p>
                               <p align="left">With respect to Ad Servers: To try 
                                 and bring you offers that are of interest to you, 
                                 we have relationships with other companies that 
@@ -336,20 +341,20 @@ google_ad_height = 15;
                           of Interest</div></td>
                     </tr>
                     <tr> 
-                      <td><a class="type3" target="_blank" href="http://www.iloveuquotes.com">Love 
+                      <td><a class="type3" target="_blank" href="http://www.romancequote.com">Love 
                         quotes</a></td>
                       <td><a class="type3" target="_blank" href="http://www.romanticquiz.com">Love 
                         quizzes</a></td>
                     </tr>
                     <tr> 
-                      <td><a class="type3" target="_blank" href="http://www.inlovequote.com">Love 
+                      <td><a class="type3" target="_blank" href="http://www.iloveuquotes.com">Love 
                         quotes</a></td>
-                      <td><a class="type3" target="_blank" href="http://www.romancequote.com">Love 
+                      <td><a class="type3" target="_blank" href="http://www.inlovequote.com">Love 
                         quotes</a></td>
                     </tr>
                   </tbody></table>
                   <br>
-                  <br> <script type="text/javascript" src="125bannerload.js"></script><a href="http://www.shareasale.com/r.cfm?b=24346&amp;u=96183&amp;m=1837&amp;urllink=&amp;afftrack=" target="_blank" rel="nofollow"><img border="0" src="http://www.shareasale.com/image/125_1252.gif"></a> 
+                  <br> <script type="text/javascript" src="125bannerload.js"></script><a href="http://www.shareasale.com/r.cfm?b=14288&amp;u=96183&amp;m=1837&amp;urllink=&amp;afftrack=" target="_blank" rel="nofollow"><img border="0" src="http://www.shareasale.com/image/125X12511111.gif"></a> 
                   <br> <br>
                   <br>
                   <script type="text/javascript"><!--
