--- a/r/ra/rai/rainbird.com.html
+++ b/r/ra/rai/rainbird.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbird.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620180738id_/http%3A//rainbird.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbird.com privacy policy that was archived on 2009-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090916010536id_/http%3A//www.rainbird.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/general.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
