--- a/f/fo/fon/font-zone.com.html
+++ b/f/fo/fon/font-zone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the font-zone.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618191741id_/http%3A//www.font-zone.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the font-zone.com privacy policy that was archived on 2009-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090916030655id_/http%3A//www.font-zone.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Free fonts at Font-zone.com</title>
@@ -9,14 +9,7 @@
 	<meta name="verify-v1" content="sXp5iq3eZ7FBV2o4Ev0zrpZUHiNoGL30nurRv/wh9hM=">
 	</head>
 	<body vlink="#C0C0C0" link="#808080">
-	<!-- pv:2 --><script language="javascript">
-win2=window.open('http://www.webphotomart.com/');
-if (win2)
-	{
-	win2.blur();
-	window.focus();
-	}
-</script><center>
+	<!-- pv:1 --><center>
 	<table border="0" cellspacing="0" cellpadding="0" width="100%" height="15"><tbody><tr><td width="100%" height="5"></td></tr></tbody></table>
 	<table border="0" cellspacing="0" cellpadding="0" width="100%" height="100" background="/images/v3_topbg.png">
 		<tbody><tr>
@@ -24,12 +17,16 @@ if (win2)
 				<table border="0" cellspacing="0" cellpadding="0" width="990" height="100" background="/images/v3_topbg.png">
 					<tbody><tr>
 						<td width="260" height="100" align="center" background="/images/v3_topbg.png"><a href="/"><img src="/images/logo3.gif" border="0"></a></td>
-						<td width="730" height="100" align="right" background="/images/v3_topbg.png"><!-- ValueClick Media 468x60 and 728x90 Banner CODE for font-zone.com -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=49479&amp;m=1&amp;tp=5&amp;d=j&amp;t=s"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=49479&m=1&c=1" target="_top">
-<img src="http://media.fastclick.net/w/get.media?sid=49479&m=1&tp=5&d=s&c=1"
-width=728 height=90 border=1></a></noscript>
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for font-zone.com --></td>
+						<td width="730" height="100" align="right" background="/images/v3_topbg.png"><!-- BEGIN RICH-MEDIA Burst Network CODE -->
+<script type="text/javascript" language="JavaScript">
+rnum=Math.round(Math.random() * 100000);
+ts=String.fromCharCode(60);
+if (window.self != window.top) {nf=''} else {nf='NF/'};
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/v=2.3S/sz=468x60A|728x90A/'+rnum+'/NI/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/v=2.3S/sz=468x60A|728x90A/34565/NI/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad19234b-map.cgi/ns/v=2.3S/sz=468x60A|728x90A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/ns/v=2.3S/sz=468x60A|728x90A/" border="0" alt="Click Here" /></a>
+</noscript>
+<!-- END Burst Network CODE --></td>
 					</tr>
 				</tbody></table>
 			</td>
@@ -47,6 +44,10 @@ width=728 height=90 border=1></a></noscript>
 		<td>
 			<table border="0" cellspacing="0" cellpadding="0" width="990">
 				<tbody><tr>
+					<td width="680" height="0"></td>
+					<td width="310" height="0"></td>
+				</tr>
+				<tr>
 					<td width="680" bgcolor="white" valign="top" align="center">	<table border="0" cellspacing="1" cellpadding="0" bgcolor="black" width="660">
 	<tbody><tr>
 		<td bgcolor="white" width="660" height="170">
@@ -247,12 +248,16 @@ var addthis_header_background = "#D7DEE4";
 </div>
 </td></tr></tbody></table>
 <table border="0" cellspacing="0" cellpadding="0" height="5" width="120"><tbody><tr><td width="120" height="5"></td></tr></tbody></table>
-<!-- ValueClick Media 300x250 Medium Rectangle CODE for font-zone.com -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=49479&amp;m=6&amp;tp=8&amp;d=j&amp;t=s"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=49479&m=6&c=1" target="_top">
-<img src="http://media.fastclick.net/w/get.media?sid=49479&m=6&tp=8&d=s&c=1"
-width=300 height=250 border=1></a></noscript>
-<!-- ValueClick Media 300x250 Medium Rectangle CODE for font-zone.com -->
+<!-- BEGIN RICH-MEDIA Burst Network CODE -->
+<script type="text/javascript" language="JavaScript">
+rnum=Math.round(Math.random() * 100000);
+ts=String.fromCharCode(60);
+if (window.self != window.top) {nf=''} else {nf='NF/'};
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/v=2.3S/sz=300X250A|300x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/v=2.3S/sz=300X250A|300x600A/91217/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad19234b-map.cgi/ns/v=2.3S/sz=300X250A|300x600A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad19234b.cgi/ns/v=2.3S/sz=300X250A|300x600A/" border="0" alt="Click Here" /></a>
+</noscript>
+<!-- END Burst Network CODE -->
 <table border="0" cellspacing="0" cellpadding="0" height="5" width="120"><tbody><tr><td width="120" height="5"></td></tr></tbody></table>
 <script type="text/javascript"><!--
 google_ad_client = "pub-9452422552321829";
@@ -326,6 +331,7 @@ google_ad_height = 250;
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+
 	</td></tr></tbody></table>
 	<table border="0" cellspacing="0" cellpadding="0" bgcolor="white" width="768">
 		<tbody><tr>
