--- a/c/cs/csn/csn.edu.html
+++ b/c/cs/csn/csn.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csn.edu privacy policy that was archived on 2009-04-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090417173111id_/http%3A//www.csn.edu/pages/731.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csn.edu privacy policy that was archived on 2009-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090916094639id_/http%3A//www.csn.edu/pages/731.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><script language="JavaScript" src="/js/gen_validatorv2.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -47,7 +47,7 @@ pageTracker._trackPageview();
                     <a id="sitelogo" href="/" title="CSN Home">
                         <img src="/images/csn/csnlogo.gif" alt="CSN Logo" width="174" height="80" border="0"></a>
                     <p>
-                        Friday, April 17, 2009
+                        Wednesday, September 16, 2009
                     </p>
                 </div>
                 <div id="generallinks">
@@ -71,9 +71,9 @@ pageTracker._trackPageview();
 <option value="/pages/444.asp">Computer Lab Hours</option>
 <option value="/pages/665.asp">Couns. &amp; Psych. Services (CAPS)</option>
 <option value="/pages/732.asp">Counseling Services</option>
+<option value="/pages/544.asp">Disability Resource Center (DRC)</option>
 <option value="http://sites.csn.edu/IL/interactive/esl.htm">ESL Classes/Testing Information</option>
 <option value="/administration/faculty/senate/index.asp">Faculty Senate</option>
-<option value="/pages/1304.asp">Faculty / Staff Email Access</option>
 <option value="/admissions/aid/index.asp">Financial Aid</option>
 <option value="/giving/index.asp">Foundation / Donate</option>
 <option value="/pages/486.asp">Grants</option>
@@ -92,7 +92,6 @@ pageTracker._trackPageview();
 <option value="/pages/517.asp">Retention/Academic Success Services</option>
 <option value="/pages/740.asp">Russell's Restaurant</option>
 <option value="/pages/138.asp">Streaming Video</option>
-<option value="http://students.csn.edu/">Student E-Mail Access</option>
 <option value="/administration/student/services/testing/index.asp">Testing Centers &amp; Locations</option>
 <option value="/pages/944.asp">Transfer Center</option>
 <option value="/pages/1902.asp">Tutoring</option>
@@ -109,7 +108,7 @@ pageTracker._trackPageview();
                                 <input type="hidden" name="cx" value="005834710049361439926:tgfbbcyjkmm">
                                 <input type="hidden" name="cof" value="FORID:9">
                                 <input type="hidden" name="ie" value="UTF-8">
-                                <input type="text" name="q" size="15" id="googletext">
+                                <input type="text" name="q" size="15" id="googletext" value="Search CSN" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;">
                                 <input type="image" src="/images/csn/button.gif" name="sa" value="Search" id="searchsubmitbutton_google">
                             </div>
                         </form>
