articlebiz.com (archived on 2009-09-16)
{
  "alexa_rank": 13841,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5829,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.92,
  "homepage_snapshot_redirected_domain": "articlebiz.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090930193822id_/http://www.articlebiz.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090930193822id_/http%3A//articlebiz.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "articlebiz.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090916121627id_/http%3A//www.articlebiz.com/privacy_policy",
  "policy_title": "ArticleBiz.com | Privacy Policy",
  "policy_url": "articlebiz.com/privacy_policy",
  "sha1": "c9b8fc19003d24ce7a80f6b861a4df8b6863f0e2",
  "simhash": 18271420699611622786,
  "simhash_updated": false,
  "site_hostname": "articlebiz.com",
  "site_url": "http://articlebiz.com",
  "smog": 13.45,
  "strict_updated": false,
  "timestamp": "20090916121627",
  "word_count": 988,
  "year": 2009
}

--- a/a/ar/art/articlebiz.com.html
+++ b/a/ar/art/articlebiz.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the articlebiz.com privacy policy that was archived on 2008-04-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080430233749id_/http%3A//www.articlebiz.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlebiz.com privacy policy that was archived on 2009-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090916121627id_/http%3A//www.articlebiz.com/privacy_policy) for the most accurate reproduction.-->
 
 <html><head>
 		<title>ArticleBiz.com | Privacy Policy</title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="keywords" content=""><meta name="description" content=""><script language="javascript" src="http://www.articlebiz.com/include/script.js"></script>
-		<link rel="stylesheet" href="http://www.articlebiz.com/include/style.v4.css" type="text/css">
+		<link rel="stylesheet" href="http://www.articlebiz.com/include/style.v6.css" type="text/css">
 	</head>
 	<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 		<table width="778" border="0" cellpadding="0" cellspacing="0" align="center"><!-- header -->
@@ -16,12 +16,11 @@
 <form action="http://www.articlebiz.com/browse_cse.jsp" id="searchbox_014750135212835480559:i32k_s3pqyu">
   <input type="hidden" name="cx" value="014750135212835480559:i32k_s3pqyu">
   <input type="hidden" name="cof" value="FORID:11">
-  <input type="text" name="q" size="25">
+  <input type="text" name="q" size="20">
   <input type="submit" name="sa" value="Search">
 </form>
 <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=searchbox_014750135212835480559%3Ai32k_s3pqyu&amp;lang=en"></script>
 <!-- Google CSE Search Box Ends -->
-
 		</div>
 	</td>
 </tr>
@@ -77,6 +76,7 @@
 		<td colspan="3" bgcolor="#EBF2F5" class="padded">
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
 				<tbody><tr><td><img src="http://www.articlebiz.com/img/i_bl_bul.gif" width="16" height="8"></td><td width="100%"><a href="http://www.articlebiz.com/submit_article/" class="bl">Submit Article</a></td></tr>
+				<tr><td><img src="http://www.articlebiz.com/img/i_bl_bul.gif" width="16" height="8"></td><td width="100%"><a href="http://www.articlebiz.com/check_status/" class="bl">Check Article Status</a></td></tr>
 				<tr><td><img src="http://www.articlebiz.com/img/i_bl_bul.gif" width="16" height="8"></td><td><a href="http://www.articlebiz.com/author_tos/" class="bl">Author TOS</a></td></tr>
 			</tbody></table>
 		</td>
@@ -151,7 +151,7 @@ If you choose to submit your article onto our site and/or correspond with us by 
 				<td colspan="2"><!-- footer -->
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
-		<td colspan="3" align="center"><br>Copyright © 2008 by ArticleBiz.com. All rights reserved.<br><br></td>
+		<td colspan="3" align="center"><br>Copyright © 2009 by ArticleBiz.com. All rights reserved.<br><br></td>
 	</tr>
 	<tr>
 		<td><img src="http://www.articlebiz.com/img/bt_lt_tail.gif" width="6" height="36"></td>
