--- a/f/fr/fre/freeplaynow.com.html
+++ b/f/fr/fre/freeplaynow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeplaynow.com privacy policy that was archived on 2009-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609173421id_/http%3A//www.freeplaynow.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeplaynow.com privacy policy that was archived on 2009-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090916205804id_/http%3A//www.freeplaynow.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy</title>
@@ -15,7 +15,6 @@
 <div id="container">
 <div id="header"><div id="hd1"><div id="hd2">
 <div id="hd3"><a href="http://www.freeplaynow.com" title="Free Online Games"><i><strong>Free Online Games</strong></i></a>
-
 </div>
 <div id="hd4"></div>
 <div id="hd5"></div>
@@ -24,6 +23,7 @@
 <ul><li><a href="http://www.freeplaynow.com/play-free-games/" title="PLAY FREE GAMES">Play Free Games</a></li>
 <li><a href="http://www.freeplaynow.com/toprated-games/" title="Today's Top Rated Games">Top Rated Games</a></li>
 <li><a href="http://www.freeplaynow.com/mostplayed-games/" title="Today's Most Played Games">Most Played Games</a></li>
+<li><a href="http://www.freeplaynow.com/play-games/" title="">Play Games</a></li>
 </ul>
 </div>
 <div id="mainmenu"><div id="mm1"><div id="mm2">
@@ -53,7 +53,13 @@
 <p> At www.freeplaynow.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.freeplaynow.com and how it is used. </p>
 <p> <b>Log Files</b><br> Like many other Web sites, www.freeplaynow.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user’s movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. </p>
 <p> <b>Cookies and Web Beacons</b><br> www.freeplaynow.com does not use cookies. </p>
-<p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include Google Adsense, . </p>
+<b>DoubleClick DART Cookie</b><br>
+<p>
+.:: Google, as a third party vendor, uses cookies to serve ads on www.freeplaynow.com.<br>
+.:: Google's use of the DART cookie enables it to serve ads to your users based on their visit to www.freeplaynow.com and other sites on the Internet. <br>
+.:: Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL - http://www.google.com/privacy_ads.html </p>
+<p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....... <br> Google Adsense
+<br> <br> </p>
 <p> These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.freeplaynow.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. </p>
 <p> www.freeplaynow.com has no access to or control over these cookies that are used by third-party advertisers. </p>
 <p> You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. www.freeplaynow.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. </p>
@@ -62,6 +68,14 @@
 
 </div>
 <div id="maincont">
+<div class="mainbox">
+<div id="rectangle">
+
+</div>
+<div id="basecont">
+
+</div>
+</div>
 
 </div>
 <div id="sidecont">
@@ -83,30 +97,30 @@
 <li><a href="http://www.freeplaynow.com/puzzle-games/" title="PUZZLE GAMES">Puzzle</a></li>
 <li><a href="http://www.freeplaynow.com/girls-games/" title="GIRLS GAMES">Girls</a></li>
 </ul><!-- google_ad_section_end -->
-<ul><li><a href="http://www.freeplaynow.com/tell-a-friend.html" rel="nofollow" title="Tell a Friend about FreePlayNow.com">Tell a Friend</a></li>
-<li><a href="http://www.freeplaynow.com/contact.html" rel="nofollow" title="Contact Us">Contact Us</a></li>
-<li><a href="http://www.freeplaynow.com/privacy.html" rel="nofollow" title="">Privacy Policy</a></li>
-<li><a href="http://www.freeplaynow.com/links/" rel="nofollow" title="LINK STATS">Links</a></li>
-<li><a href="http://www.freeplaynow.com/link-exchange.html" rel="nofollow" title="TRAFFIC EXCHANGE">Traffic and Link Exchange</a></li>
+<ul><li><a href="http://www.freeplaynow.com/tell-a-friend.html" title="Tell a Friend about FreePlayNow.com">Tell a Friend</a></li>
+<li><a href="http://www.freeplaynow.com/contact.html" title="Contact Us">Contact Us</a></li>
+<li><a href="http://www.freeplaynow.com/privacy.html" title="">Privacy Policy</a></li>
+<li><a href="http://www.freeplaynow.com/links/" title="LINK STATS">Links</a></li>
+<li><a href="http://www.freeplaynow.com/link-exchange.html" title="TRAFFIC EXCHANGE">Traffic and Link Exchange</a></li>
 <li><a href="http://www.freeplaynow.com/free-games-for-website.html" title="FREE GAMES FOR YOUR WEBSITE">FREE GAMES FOR YOUR WEBSITE</a></li>
-<li><a href="http://www.freeplaynow.com/rss/" rel="nofollow" title=""><img src="/images/rss.gif" alt="RSS"></a></li>
+<li><a href="http://www.freeplaynow.com/rss/" title=""><img src="/images/rss.gif" alt="RSS"></a></li>
 </ul>
 </div>
 <div id="footnote"><!-- google_ad_section_start --> 
-Best source for <a href="http://www.freeplaynow.com">free online games</a> including arcade games, action games, puzzle games, online games, internet games, flash games, web games, pc games, and much more.
+Best source for free online games including arcade games, action games, puzzle games, online games, internet games, flash games, web games, pc games, and much more.
 <br>No matter what your mood you will find much more than just ordinary online games you find at other places. Our aim is to give you the best and newest free games to play online.
 <br>We can assure you the wide variety of the internet games available for you to enjoy, and it is being daily updated to provide you fresh online games.
 <br>Please Bookmark us so you can come back to play more internet games and online games. Enjoy your entertainment hours to play our fresh collection of games.
 <br>
 <br>All games are copyrighted or trademarked by their respective owners or authors, thus FreePlayNow.com does not take a responsibility for all the contents present on this site.
-<br>In addition FreePlayNow.com cannot be held liable for any damage caused by playing free games hosted on this online gaming website.
+<br> In addition FreePlayNow.com cannot be held liable for any damage caused by playing free games hosted on this online gaming website.
 <br>If you find that your game is published on FreePlayNow.com without your agreement or permission, please contact us to remove your game from our site.
 <br><br>
 Copyright © 2007 freeplaynow.com
 - All games are copyrighted or trademarked by their respective owners or authors, All right reserved.<!-- google_ad_section_end --> 
 </div>
 <br>
-
+<script type="text/javascript" src="http://optimizedby.rmxads.com/st?ad_type=ad&amp;ad_size=728x90&amp;section=290558"></script>
 </div>
 </div>
 <script type="text/javascript">
@@ -118,6 +132,5 @@ try {
 var pageTracker = _gat._getTracker("UA-3344951-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-
 
 </body></html>
