--- a/s/sc/sch/scholarshipexperts.com.html
+++ b/s/sc/sch/scholarshipexperts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scholarshipexperts.com privacy policy that was archived on 2009-04-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090417075608id_/http%3A//www.scholarshipexperts.com/scholarships/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scholarshipexperts.com privacy policy that was archived on 2009-09-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090917010131id_/http%3A//www.scholarshipexperts.com/scholarships/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -499,7 +499,7 @@ Alexandria. VA 22314<br>
     </tbody>
     </table>    
 <!-- Version: 3.6 -->
-<!-- Apr 05 09 06:18 PM -->
+<!-- Aug 30 09 11:14 AM -->
 			<!-- End Footer -->			    
              </td>
           </tr>
@@ -521,8 +521,6 @@ var pageTracker = _gat._getTracker("UA-2885761-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
-
-
 
 
 
