--- a/r/re/rep/reputationauthority.org.html
+++ b/r/re/rep/reputationauthority.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the reputationauthority.org privacy policy that was archived on 2009-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090419100302id_/http%3A//www.reputationauthority.org/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the reputationauthority.org privacy policy that was archived on 2009-09-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090917020242id_/http%3A//www.reputationauthority.org/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>BorderWare ReputationAuthority</title>
@@ -67,9 +67,9 @@ if(value == input.value){
 
 <table width="960" height="65" border="0" align="center" cellpadding="0" cellspacing="0">
     <tbody><tr>      
-    <td width="50%" height="45" align="left" valign="top"> <a href="http://www.borderware.com"><img src="images/borderware_logo.gif" alt="borderware.com" name="logo" border="0" align="left" id="logo"></a> 
+    <td width="50%" height="65" align="left" valign="top"> <a href="http://www.borderware.com"><img src="images/bw_nowpartofWG.jpg" alt="borderware.com" name="logo" border="0" align="left" id="logo"></a> 
     </td>
-    <td width="50%" height="45" align="right" valign="top"> <a href="http://www.reputationauthority.org/"><img src="images/reputation_authority_logo.gif" alt="BorderWare  ReputationAuthority" name="logo" border="0" align="right" id="logo"></a> 
+    <td width="50%" height="65" align="right" valign="top"> <a href="http://www.reputationauthority.org/"><img src="images/reputation_authority_logo.gif" alt="BorderWare  ReputationAuthority" name="logo" border="0" align="right" id="logo"></a> 
     </td>
     </tr>
     <tr>      
