--- a/n/no/noa/noamdesign.com.html
+++ b/n/no/noa/noamdesign.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the noamdesign.com privacy policy that was archived on 2009-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090530173344id_/http%3A//www.noamdesign.com/Web-Design-Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the noamdesign.com privacy policy that was archived on 2009-09-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090917191521id_/http%3A//www.noamdesign.com/Web-Design-Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr"><head>
 
@@ -153,13 +153,13 @@ div#nVPageFoot {
 	<div id="Cadre"><div id="CadreTete"><div id="CadrePied">
 
 		<div id="Menu"> 
-		<div id="logo"><h1><a href="http://www.noamdesign.com/" title="Web Design Company New York">Web Design Company New York</a></h1></div>
+		<div id="logo"><a href="http://www.noamdesign.com/" title="Web Design Company New York">Web Design Company New York</a></div>
 		<div id="LienMenu">
 						<a href="/" id="LienMenuHome" title="Web Design"><span>Home</span></a>
-						<a href="/New-York-Web-Design-Solutions/Business-Website-Design" id="LienMenuServices" title="Web Design Solutions"><span>Web Design Solutions</span></a>
+						<a href="/New-York-Web-Design-Solutions/Business-Website-Design" id="LienMenuSolutions" title="Web Design Solutions"><span>Web Design Solutions</span></a>
 						<a href="/Web-Design-Portfolio/Custom-Web-Design" id="LienMenuPortfolio" title="Web Design Portfolio"><span>Web Design Portfolio</span></a>
-						<a href="/New-York-Web-Design-About/Web-Design-Company" id="LienMenuWhyChooseUs" title="Why choose Web Design Company New York"><span>Why choose Web Design Company New York</span></a><br><div class="Defloteur"></div>
-						<a href="/Web-Design-Overview" id="LienMenuLTO" title="New York Web Design Overview"><span>New York Web Design Overview</span></a>
+						<a href="/New-York-Web-Design-About/Web-Design-Company" id="LienMenuAbout" title="Why choose Web Design Company New York"><span>Why choose Web Design Company New York</span></a><br><div class="Defloteur"></div>
+						<a href="/Web-Design-Blog" id="LienMenuBlog" title="Web Design Company Blog"><span>Web Design Blog</span></a>
 						</div>
 
 			<div id="ContactBox"><div id="CBTete"><div id="CBPied">
@@ -169,7 +169,7 @@ div#nVPageFoot {
 					<li>Send us a message:
 						<div id="InputSendBox" onclick="affContact();" onmouseover="document.getElementById('InputSendBox').style.background='#FFFFFF';" onmouseout="document.getElementById('InputSendBox').style.background='rgb(185,185,185)';" title="Click to send a message"></div>
 					</li>
-					<li> <a href="mailto:contact@noamDesign.com" class="LienMail" title="Email Web Design New York">contact@noamDesign.com</a></li>
+					<li> <a href="http://twitter.com/noamdesign" target="_blank" class="LienMail" title="Follow New York Web Design Company">Follow us on Twitter</a></li>
 					<li>Phone: 1-800-615-5962</li>
 					</ul>
 				</div>
@@ -178,7 +178,7 @@ div#nVPageFoot {
 		</div>
 
 		<div id="Contenu">
-			<div id="CallUs"><span class="TitreCallUs">Privacy <span>Policy</span> </span> Call us now: <a id="RappelerMoi" href="http://www.ringcentral.com/ringme/?uc=56197368,0,&amp;s=no&amp;v=2" title="Click to call toll free" onclick="window.open('http://www.ringcentral.com/ringme/?uc=56197368,0,&amp;s=no&amp;v=2','Callback_RingMe','resizable=no,width=380,height=240'); return(false);">1-800-615-5962</a></div>
+			<div id="CallUs"><span class="TitreCallUs">Privacy <span>Policy</span> </span> Call us now: <div id="RappelerMoi">800-615-5962</div></div>
             
 			<div id="nVPage">
 			<div id="PageSansStepBar">
@@ -274,6 +274,15 @@ div#nVPageFoot {
 </script>
 
 <script type="text/javascript" src="/Data/AJAX/lib_basic.js"></script>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9601379-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </div></div>
 
 <script type="text/javascript">
