--- a/t/tw/twe/tweetizen.com.html
+++ b/t/tw/twe/tweetizen.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tweetizen.com privacy policy that was archived on 2009-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090603054828id_/http%3A//www.tweetizen.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tweetizen.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919020830id_/http%3A//www.tweetizen.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html><head>
 		<title>About Tweetizen</title>
@@ -28,7 +28,7 @@
 			<!-- top bar -->
 						<div id="top_bar">
 				<p>Latest:</p>
-				<span>Our login now uses OAuth, making your Tweetizen experience secure - Login with confidence!</span>
+				<span>Bookmark this page for all the latest breaking news on twitter!</span>
 			</div>			
 			<!-- header -->
 			<div id="header">
