goldmoney.com (archived on 2009-09-19)
{
  "alexa_rank": 76869,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1914,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.76,
  "homepage_snapshot_redirected_domain": "goldmoney.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090918102659id_/http://goldmoney.com/index.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20090918103735id_/http%3A//goldmoney.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "goldmoney.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090919132745id_/http%3A//goldmoney.com/privacy-policy.html",
  "policy_title": "GoldMoney Privacy Policy",
  "policy_url": "goldmoney.com/privacy-policy.html",
  "sha1": "f7c90055a3edb0087e2225b1ab64a1c029ca3dc1",
  "simhash": 14943258200606201683,
  "simhash_updated": true,
  "site_hostname": "goldmoney.com",
  "site_url": "http://goldmoney.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090919132745",
  "word_count": 299,
  "year": 2009
}

--- a/g/go/gol/goldmoney.com.html
+++ b/g/go/gol/goldmoney.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goldmoney.com privacy policy that was archived on 2009-02-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090208022314id_/http%3A//goldmoney.com/en/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goldmoney.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919132745id_/http%3A//goldmoney.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,126 +7,124 @@
 <!-- metas -->
 <meta name="description" content="GoldMoney's privacy policy.">
 <meta name="keywords" content="privacy, policy">
+<meta name="robots" content="FOLLOW">
+<meta http-equiv="content language" content="en">
+<link rel="canonical" href="http://goldmoney.com/privacy-policy.html">
 <!-- styles -->
-<link href="styles/calculator.css" rel="stylesheet" type="text/css" media="all">
-<link href="styles/styles.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lte IE 6]>
-<link href="styles/styles_IE6.css" rel="stylesheet" type="text/css" media="all"/>
-<![endif]-->
-<!--[if IE 7]>
-<link href="styles/styles_IE7.css" rel="stylesheet" type="text/css" media="all"/>
-<![endif]-->
-<link href="styles/styles_print.css" rel="stylesheet" type="text/css" media="print">
+<link href="style/styles.css" rel="stylesheet" type="text/css" media="all">
+<link href="style/styles_print.css" rel="stylesheet" type="text/css" media="print">
 <!-- Javascript -->
-<script src="js/jquery-1.2.6.min.js" type="text/javascript"></script>
-<script src="js/init.js" type="text/javascript"></script>
-<script src="js/ scroller.js " type="text/javascript"></script>
+
 </head>
-<body>
+<body style="font-size: 62.5%">
 <div id="wrapper">
   <!-- head -->
   <div id="head">
-    <div class="w450i">
-      <span><a title="Home" href="index.php"><img src="images/logos/buy-gold-and-silver-at-goldmoney.jpg" alt="GoldMoney. The best way to buy gold &amp; silver"></a></span>
+    <div class="w450l">
+    	<ul class="sitelogo">
+    		<li>
+	    		<a title="GoldMoney. The best way to buy gold &amp; silver" href="index.html"><img src="http://goldmoney.com/images/logos/buy-gold-and-silver-at-goldmoney.jpg" alt="GoldMoney. The best way to buy gold &amp; silver"></a>
+	    	</li>
+      	</ul>
     </div>
-    <div class="w450d">
+    <div class="w450r">
       <ul class="btn">
-        <li><a href="https://secure.goldmoney.com/user/login.php"><img src="images/btn_login.gif" alt="Login"></a></li>
-        <li><a href="https://secure.goldmoney.com/user/opnhld.php"><img src="images/btn_signup.gif" alt="Free Sign Up"></a></li>
+        <li><a href="https://secure.goldmoney.com/user/login.php"><img src="http://goldmoney.com/images/btn_login.gif" alt="Login"></a></li>
+        <li><a href="https://secure.goldmoney.com/user/opnhld.php"><img src="http://goldmoney.com/images/btn_signup.gif" alt="Free Sign Up"></a></li>
       </ul>
     </div>
   </div>
   <!-- /head -->
   <!-- menu -->
+  
   <div id="menu">
     <div class="w900">
       <ul>
-        <li id="menu_home"><a href="index.php">Home</a></li>
-        <li id="menu_why"><a href="why-goldmoney.html">Why GoldMoney</a></li>
-        <li id="menu_services"><a href="services-and-rates.html">Services &amp; Rates</a></li>
-        <li id="menu_how"><a href="how-it-works.html">How It Works</a></li>
-        <li id="menu_guarantee"><a href="guarantee.html">Guarantee</a></li>
-        <li id="menu_about"><a href="about-us.html">About Us</a></li>
-        <li id="menu_contact"><a href="contact-us.php">Contact Us</a></li>
-      </ul>
+      	      		<li id="menuHome"><a href="index.html" title="Buy Gold and Silver at GoldMoney - Best Way to Buy Gold and Silver">Home</a></li>
+      	      		<li id="menuWhy"><a href="why-goldmoney.html" title="Why Buy Gold &amp; Silver from GoldMoney">Why GoldMoney</a></li>
+      	      		<li id="menuServices"><a href="services-and-rates.html" title="GoldMoney Services and Rates">Services &amp; Rates</a></li>
+      	      		<li id="menuHow"><a href="how-it-works.html" title="How to Get Started Buying Gold and Silver">How it Works</a></li>
+      	      		<li id="menuGuarantee"><a href="governance.html" title="Goldmoney Governance">Governance</a></li>
+      	      		<li id="menuAbout"><a href="about-us.html" title="About GoldMoney - Secure Online Gold and Silver Buying">About Us</a></li>
+      	      		<li id="menuContact"><a href="contact-us.html" title="GoldMoney Customer Support">Contact Us</a></li>
+      	      </ul>
     </div>
   </div>
   <!-- /menu -->
-  <!-- body -->
-  <div id="body">
-    <div class="w900">
-      <div class="caja">
-        <div class="roundedcornr_box">
-          <div class="roundedcornr_top">
-            <div></div>
-          </div>
-          <div class="roundedcornr_content">
-            <div class="roundedcornr_shadow_single">
-			  <!-- title -->
-			  <div id="title">
-			    <div class="content-title">
-					<table width="100%">
-						<tbody><tr>
-							<td class="ct-h1"><h1>Privacy Policy</h1></td>
-						</tr>
-						<tr>
-							<td class="title-line"></td>
-						</tr>
-						<tr>
-							<td colspan="2">&nbsp;</td>
-						</tr>
-					</tbody></table>
-			    </div>
-			  </div>
-			  <hr>
-			  <!-- /title -->
-              <!-- body text -->
-              <p align="justify">GoldMoney will treat as confidential information it holds in relation to a User where that information is not in the public domain. Subject to this Clause GoldMoney will not disclose such confidential information to third-parties.</p>
-              <p align="justify"> In order to provide its services to Users, GoldMoney shall process any personal data it holds in accordance with applicable data protection legislation and may use agents and other third-parties in Jersey and elsewhere to hold or process personal data or other confidential information. As a User and party to these terms you provide your express consent to the transfer, holding and processing of such personal data and other confidential information in this way.</p>
-              <p align="justify"> GoldMoney will disclose otherwise confidential personal data and confidential information if it is compelled to do so by laws and regulations applicable to it and/or its agents, and whether in Jersey or elsewhere.</p>
-              <p align="justify">At any time you may access and change your personal information that is in the possession of GoldMoney by logging into your Holding and by clicking the "Profile &amp; Settings &gt; Contact Details" link.</p>
-              <p align="justify">GoldMoney does not sell, rent, loan, trade or lease any personal information collected, including application forms, financial data or email addresses. GoldMoney may ask for your permission by email to disclose your personal data to service providers not affiliated with GoldMoney, but you have the right to refuse.</p>
-              <p align="justify">For security reasons, we do not recommend saving your Holding number and Passphrase in your computer's memory (do not allow your browser to remember your Passphrase). Consequently, we advise entering your Holding number and Passphrase each time you begin a new browser session and wish to view your Holding. Please read our <a href="http://support.goldmoney.com/category.php?id=10">Security FAQ</a> for important tips on accessing GoldMoney securely.</p>
-              <p>Questions regarding the GoldMoney privacy policy should be directed to <a href="contact-us.php">Customer Support</a>.</p>
-            </div>
-          </div>
-          <div class="roundedcornr_bottom">
-            <div></div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+  <!-- page extras -->
+  <div id="extras">
+	<div class="w900">
+	    <div class="w400l">
+	  		<div class="lang">
+	  						</div>
+			<div class="textSize">
+		    	&nbsp;&nbsp;&nbsp;&nbsp;
+				<form action="" method="post">
+																							<input type="image" name="ssnTextSize" src="http://goldmoney.com/images/textDecrease.gif" alt="Decrease Text Size" value="-1">
+																																		<input type="image" name="ssnTextSize" src="http://goldmoney.com/images/textIncrease.gif" alt="Increase Text Size" value="1">
+															</form>
+			</div>
+		</div>
+		<div class="w500r">
+			<div class="search">
+				<form action="search.html" method="post">
+					<p><b>Search:&nbsp;</b><input type="text" name="search_text" value="" class="inputbox">&nbsp;
+					<input type="submit" class="submitBtn" name="btnACTION" value="Go"></p>
+				</form>
+			</div>
+		</div>
+	</div>
   </div>
-  <!-- /body -->
-  <!-- foot -->
+  <!-- /page extras -->
+
+
+  <!-- columns -->
+  <div id="columns">
+	<table width="100%"><tbody><tr><td class="rctl"></td><td class="rt"></td><td class="rctr"></td></tr><tr><td class="rl"></td><td>	<center class="w625">
+
+	
+	
+	<table width="100%" class="content-title"> 	<tbody> 		<tr> 			<td class="ct-h1"><h1>Privacy Policy</h1></td> 		</tr> 		<tr> 			<td class="title-line"></td> 		</tr> 		<tr> 			<td colspan="2">&nbsp;</td> 		</tr> 	</tbody> </table> <hr> <!-- /title -->               <!-- body text --> <p style="text-align: left;">GoldMoney will treat as confidential information it holds in relation to a User where that information is not in the public domain. Subject to this Clause GoldMoney will not disclose such confidential information to third-parties.</p> <p style="text-align: left;">In order to provide its services to Users, GoldMoney shall process any personal data it holds in accordance with applicable data protection legislation and may use agents and other third-parties in Jersey and elsewhere to hold or process personal data or other confidential information. As a User and party to these terms you provide your express consent to the transfer, holding and processing of such personal data and other confidential information in this way.</p> <p style="text-align: left;">GoldMoney will disclose otherwise confidential personal data and confidential information if it is compelled to do so by laws and regulations applicable to it and/or its agents, and whether in Jersey or elsewhere.</p> <p style="text-align: left;">At any time you may access and change your personal information that is in the possession of GoldMoney by logging into your Holding and by clicking the "Profile &amp; Settings &gt; Contact Details" link.</p> <p style="text-align: left;">GoldMoney does not sell, rent, loan, trade or lease any personal information collected, including application forms, financial data or email addresses. GoldMoney may ask for your permission by email to disclose your personal data to service providers not affiliated with GoldMoney, but you have the right to refuse.</p> <p style="text-align: left;">For security reasons, we do not recommend saving your Holding number and Passphrase in your computer's memory (do not allow your browser to remember your Passphrase). Consequently, we advise entering your Holding number and Passphrase each time you begin a new browser session and wish to view your Holding. Please read our <a href="faq.html?faq_cat=10">Security FAQ</a> for important tips on accessing GoldMoney securely.</p> <p style="text-align: left;">Questions regarding the GoldMoney privacy policy should be directed to <a href="contact-us.html">Customer Support</a>.</p>
+	
+	</center>
+	</td><td class="rr"></td></tr><tr><td class="rcbl"></td><td class="rb"></td><td class="rcbr"></td></tr></tbody></table>  </div>
+  <!-- /columns --><!-- foot -->
+  
   <div id="foot">
     <div class="w900">
       <ul>
-        <li class="firstChild"><a href="disclaimer.html">Disclaimer</a></li>
-        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-        <li><a href="user-agreement.html">User Agreement</a></li>
-        <li><a href="cap.html">Application Forms</a></li>
-        <li><a href="contact-us.php">Contact Us</a></li>
-        <li><a href="help.html">Help</a></li>
-        <li><a href="http://support.goldmoney.com/">FAQ</a></li>
-        <li><a href="fees.php">Fees</a></li>
-        <li><a href="sitemap.html">Sitemap</a></li>
-      </ul>
-      <p>Copyright © 2001-2009 Net Transactions Limited (Jersey, British Channel Islands)<br>
-        GoldMoney is the Registered Business Name of Net Transactions Limited which is regulated by the Jersey Financial Services Commission under the Financial Services (Jersey) Law 1998.</p>
+            	<li class="firstChild"><a href="disclaimer.html" title="GoldMoney Disclaimer">Disclaimer</a></li>
+            	<li><a href="privacy-policy.html" title="GoldMoney Privacy Policy">Privacy Policy</a></li>
+            	<li><a href="user-agreement.html" title="GoldMoney User Agreement">User Agreement</a></li>
+            	<li><a href="cap.html" title="GoldMoney's Customer Acceptance Policy">Application Forms</a></li>
+            	<li><a href="contact-us.html" title="GoldMoney Customer Support">Contact Us</a></li>
+            	<li><a href="help.html" title="Tutorials to help you get started with GoldMoney">Help</a></li>
+            	<li><a href="faq.html" title="GoldMoney frequently asked questions">FAQ</a></li>
+            	<li><a href="fees.html" title="GoldMoney Fees and Rates">Fees</a></li>
+            	<li><a href="charts.html" title="Gold and Silver Price Charts">Charts</a></li>
+            	<li><a href="sitemap.html" title="GoldMoney Sitemap">Sitemap</a></li>
+            </ul>
+      <p>Copyright © 2001-2009 Net Transactions Limited (Jersey, British Channel Islands)<br>GoldMoney is the Registered Business Name of Net Transactions Limited which is regulated by the Jersey Financial Services Commission under the Financial Services (Jersey) Law 1998.</p>
+
     </div>
   </div>
   <!-- /foot -->
-
-</div>
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+ </div>
 <script type="text/javascript">
-_uacct = "UA-843699-1";
-urchinTracker();
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-843699-1");
 </script>
-
+<script type="text/javascript" src="/js/gm-searchengines.js"></script>
+<script type="text/javascript" src="/js/gm-exclude-keywords.js"></script>
+<script type="text/javascript">
+pageTracker._setCookieTimeout("2592000");
+pageTracker._setDomainName(".goldmoney.com");
+pageTracker._trackPageview();
+</script>
 
 
 </body></html>
