horizonhobby.com (archived on 2009-09-19)
{
  "alexa_rank": 53120,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 20041,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.36,
  "homepage_snapshot_redirected_domain": "horizonhobby.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091027212826id_/http://www.horizonhobby.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091027212826id_/http%3A//horizonhobby.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "horizonhobby.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090919150141id_/http%3A//www.horizonhobby.com/Support/Website/Privacy.aspx",
  "policy_title": "Horizon Hobby",
  "policy_url": "horizonhobby.com/Support/Website/Privacy.aspx",
  "sha1": "ee04e1c8a7d159f26a6294e1786896842cd4de78",
  "simhash": 13664198493978884792,
  "simhash_updated": false,
  "site_hostname": "horizonhobby.com",
  "site_url": "http://horizonhobby.com",
  "smog": 14.41,
  "strict_updated": true,
  "timestamp": "20090919150141",
  "word_count": 3176,
  "year": 2009
}

--- a/h/ho/hor/horizonhobby.com.html
+++ b/h/ho/hor/horizonhobby.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the horizonhobby.com privacy policy that was archived on 2009-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090603030631id_/http%3A//www.horizonhobby.com/Support/Website/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the horizonhobby.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919150141id_/http%3A//www.horizonhobby.com/Support/Website/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 		<title>Horizon Hobby</title>
@@ -32,7 +32,7 @@
 		<a name="top" id="top"></a>
 				<div id="webMainContainer">
 <form name="_ctl0" method="post" action="Privacy.aspx" id="_ctl0">
-<input type="hidden" name="__VIEWSTATE" value="dDwtMTYyMjQ0NTk0Njs7PjU+Kv6BIU4le5uqJeN8ATv94ZJT">
+<input type="hidden" name="__VIEWSTATE" value="dDwtMTYyMjQ0NTk0Njs7Ph90AvnRkalTt3eHhPVl0eYE7lfp">
 
 
 
@@ -42,9 +42,9 @@
 
 		<!--<a href="http://www.horizonhobby.com"><img src="/Content/images/v2.4/logo.gif" alt="Horizon Hobby" title="Horizon Hobby" /></a>-->
 		<a href="http://www.horizonhobby.com/Search/" id="btnMainSearch"><span>Search</span></a>
-		<input name="_ctl1:txtSearch" id="_ctl1_txtSearch" type="text" class="inputText" maxlength="30" size="10">
-		<input name="_ctl1:btnSearch" id="_ctl1_btnSearch" type="submit" class="btnSubmit" value="&nbsp;">
-		
+		<input name="_ctl1:txtSearch" id="_ctl1_txtSearch" type="text" class="inputText" maxlength="30" size="10" onkeypress="return defaultButton(this, 'btnSearch', event)">
+		<input type="submit" id="btnSearch" class="btnSubmit" value="_" name="btnSearch">
+	
 		<a id="viewCart" href="/Cart/ViewCart.aspx" title="View Cart"><span>View Cart</span>0 items</a>
 		<div class="clear"><!-- clear float --></div>
 		
@@ -87,11 +87,11 @@ html #links #headerTabs #homeTab{background-position:0px bottom;}
 		<li><a class="menu1five item" href="http://www.horizonhobby.com/RC/Default.aspx#partsFinder"><span>Parts Finder</span></a></li>
 		<li><a class="menu1seven item" href="http://search.horizonhobby.com/index.jsp?N=390056&amp;sid=11FDD09EA830"><span>Articles</span></a></li>
 		<li><a class="menu1four item" href="http://www.horizonhobby.com/Support/Customer/Shipping.aspx "><span>Shipping</span></a></li>
-		<li><a class="menu1six item" href="http://search.horizonhobby.com/index.jsp?N=0&amp;Ntt=weekly_specials&amp;sid=11FDC237986E"><span>Weekly Specials</span></a></li>
+		<li><a class="menu1six item" href="http://www.horizonhobby.com/Promotions/WeeklySpecials"><span>Weekly Specials</span></a></li>
 	</ul><!-- topNav -->
 </div><!--menu1-->
 
-<div id="facebookBtn"><a onclick="javascript: pageTracker._trackPageview('/FacebookBtn');" href="http://www.facebook.com/pages/Horizon-Hobby/55340718934"><img src="/content/images/v2.4/nav/facebookHdr.jpg" alt="Find us on Facebook"></a></div>
+<div id="facebookBtn"><a onclick="javascript: pageTracker._trackPageview('/FacebookBtn');" href="http://www.facebook.com/HorizonHobby"><img src="/content/images/v2.4/nav/facebookHdr.jpg" alt="Find us on Facebook"></a></div>
 
 		</div>
 		<span id="navContent2">
